<resources>
    <string name="app_name">Team Maker</string>
    <string name="action_save">Save</string>
    <string name="set_name_category">Category name</string>
    <string name="empty_text_warning">This list is currently empty</string>

    <!-- dialogs-->
    <string name="dialog_add_category_title">Category</string>
    <string name="dialog_add_category_body">To add players you need to create a category</string>
    <string name="dialog_add_category_hint">Write category name</string>
    <string name="dialog_prefill">Volleyball</string>
    <!--end dialogs -->

    <!--Player View-->
    <string name="hint_player_name">Player Name</string>
    <string name="gender_text">Which gender you are?</string>
    <string name="select_game_level">Game level</string>
    <string name="button_clear">Clear</string>
    <string name="button_add">Add</string>
    <string name="clear_player">All player data was cleared</string>
    <string name="warning_validation_player">Not all data was provided</string>
    <string name="warning_provided_player_exist">Change player name</string>
    <string name="player_not_fully_registered">Please fill all requirement fields</string>
    <string name="player_add_next_title">Add next player?</string>
    <string name="player_add_next_action">Yes</string>
    <string name="player_gender_female">female</string>
    <string name="player_gender_male">male</string>

    <!-- Wizard View-->
    <string name="select_number_of_teams">Number of teams</string>
    <string name="create_mixed_teams">Create mixed teams</string>
    <string name="title_activity_wizard">WizardActivity</string>

    <!--Category View -->
    <string name="category_exist_warning">Category exist</string>
    <string name="warning_category_name_not_provided">Category name was not provided</string>
    <string name="warning_category_add_more_persons">Add more player to at least one of group</string>


</resources>
